# klotzbot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Gemfile  Guardfile  LICENSE  Procfile  Rakefile  bot.rb  build.sh  channels.txt  docker-compose.yml  environment.rb  klotzbot.rb  messages.txt  models.rb  readme.md  run.sh  web.rb  webapp.rb
migrations/: 001_setup_db.sql  002_fix_channel_unique_constraint.sql  1_setup_db.rb  2_add_channels.rb  3_add_ip_to_messages.rb  4_add_active_to_channels.rb  5_add_network_to_channels.rb
models/: channel.rb  message.rb
spec/: model_spec.rb  spec_helper.rb
src/: bot.rs  config.rs  main.rs  models.rs
