[package]
name = "klotzbot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
anyhow = "1.0"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
irc = "0.15"
clap = { version = "4.4", features = ["derive"] }

[dependencies.sqlx]
version = "0.7"
features = [
    "runtime-tokio-rustls",
    "postgres",
    "sqlite",
    "any",
    "chrono",
    "migrate",
    "macros"
]